# pa-clean

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT_PLAN.md  INTEGRATIONS.md  MIGRATION_PLAN.md  README.md  RULES.md  TESTING.md  fix_env.sh  make.sh  pyproject.toml
.github/workflows/: build-pilot.yml  build-pyinstaller.yml  ci.yml
data/: inbox_state.json
docs/: AI_TOOLS_LANDSCAPE_2026.md  FF_TESTING_GUIDE.md  FUNCTIONALITY_MAP.md  HIRING_GUIDE.md  INBOX_CHAT_TESTING_PLAN.md  LORA_FINETUNING.md  PACKAGING_PLAN.md  PERFORMANCE.md  PILOT_DISTRIBUTION.md  PLAN.md  QA_UX_REPORT.md  REMOTE_SETUP.md  SCENARIO_TEST_PLAN.md  SECURITY.md  SYSTEM_TESTING_REPORT.md  UAT.md  USER_GUIDE.md  UX_IMPROVEMENTS.md  ai-email-calendar-research.md  pa-merge-claude-code-instruction.md
packaging/: Info.plist.template  README.md  entrypoint.py  icon.icns  pyapp.env
packaging/pyinstaller/: PaClean.spec  launcher.py
scripts/: benchmark.py  build_pilot.sh  build_pyinstaller.sh  ff_install.sh  ff_start.sh  ff_uninstall.sh  generate_test_vault.py  make_icns.sh
src/personal_assistant/: __init__.py  app_launcher.py  cli.py  config.py  models.py  report_schemas.py
src/personal_assistant/calendar/: calendar_writer.py  intent_parser.py  routes.py
src/personal_assistant/inbox/: routes.py
src/personal_assistant/mlx_server/: chat_db.py  chat_routes.py  context_builder.py  engine.py  scheduler.py  server.py  vault_index.py  vector_index.py
src/personal_assistant/personal_vault/: __init__.py  context.py  db.py  models.py  routes.py
src/personal_assistant/profile/: __init__.py  context_assembler.py  models.py  routes.py  service.py
src/personal_assistant/readers/: __init__.py  applescript_base.py  calendar_reader.py  mail_reader.py
src/personal_assistant/reports/: __init__.py  generator.py  routes.py  store.py
src/personal_assistant/services/: calendar_service.py  daily_brief_service.py  date_anchors.py  deadline_extractor.py  delegate_service.py  draft_context_service.py  followup_service.py  inbox_rules_service.py  lora_dataset.py  lora_trainer.py  mail_service.py  meeting_prep_service.py  report_service.py  rule_engine.py  sync_state.py  tag_history_service.py  thread_graph_service.py  tool_prompts.py  vault_filter_service.py
src/personal_assistant/sync/: __init__.py  dedup_engine.py  thread_tracker.py
src/personal_assistant/templates/: contact.md.j2  event.md.j2  mail.md.j2
src/personal_assistant/today/: brief_routes.py  routes.py
src/personal_assistant/utils/: __init__.py  email_html.py  frontmatter.py  name_extractor.py  timezone.py
src/personal_assistant/vault/: writer.py
src/personal_assistant/webui/: __init__.py  routes.py  rules_settings.py
tests/: conftest.py
tests/e2e/: test_draft_flow_e2e.py  test_inbox_chat_integration.py  test_rules_settings_e2e.py  test_server_routes.py  test_webui_endpoints_coverage.py
tests/scenarios/: __init__.py  conftest.py  test_applescript_scenarios.py  test_calendar_scenarios.py  test_draft_flow_applescript.py  test_draft_scenarios.py  test_mail_body_scenarios.py  test_mlx_scenarios.py  test_search_scenarios.py
tests/unit/: test_app_icon_wiring.py  test_cli.py  test_config.py  test_draft_reply_dedup.py  test_engine_sampling.py  test_ff_install_scripts.py  test_inbox_rules_service.py  test_mark_read_batch.py  test_mlx_path_hot_reload.py  test_packaging_artifacts.py  test_pyinstaller_artifacts.py  test_report_schemas.py  test_reports_store.py  test_resolve_reply_message_id.py  test_rules_api_deadline_horizon.py  test_rules_settings_api.py  test_settings_wiring.py  test_thread_graph_service.py
tests/unit/calendar/: test_intent_parser.py
tests/unit/inbox/: test_draft_context_endpoint.py  test_filters_rules_only.py  test_suggest_meeting.py
tests/unit/mlx/: test_engine.py  test_llm_classify_service.py  test_priority.py  test_tool_call_detection.py  test_tool_prompts_e2e.py  test_tools_pipeline.py
tests/unit/readers/: test_applescript_retry.py  test_calendar_reader.py  test_contact_fio_pipeline.py  test_mail_reader.py  test_reader_protocol.py  test_sync_resilience.py
tests/unit/services/: test_daily_brief.py  test_date_anchors.py  test_deadline_extractor.py  test_deadline_horizon_rules.py  test_delegate_service.py  test_draft_context.py  test_followup_service.py  test_lora_dataset.py  test_lora_trainer.py  test_mail_service_fix.py  test_meeting_prep.py  test_prompt_propagation.py  test_report_service.py  test_rule_engine.py  test_russian_only_rule.py  test_sync_state.py  test_tag_history_service.py  test_tool_prompts.py  (+1 more)
tools/: registry.json
webui/: index.html  package-lock.json  package.json
webui/scripts/: bundle-js.js  copy-js.js
(+40 files in other folders)
